--- a/multimediaproject2.html
+++ b/multimediaproject2.html
@@ -12,9 +12,10 @@
         <link rel="stylesheet" href="css/css.css">
     </head>
     <body>
-        <div id="page-wrap">
+          <div id="page-wrap">
             <div id="header">
-                 <h1 class="title">Creative Multimedia Programming</h1>
+                <h1 class="title">Creative Multimedia Programming</h1>
+				<div class="intro">
 			<h3><a href="index.html">Home</a></h3>
 			<h3><a href="semister.html">Semisters</a></h3>
 			<h3><a href="contact.html">More Information</a></h3>
