--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html><head>
 	<meta charset="UTF-8">
+	<meta name="google-site-verification" content="1RH__3koeQmjR5ry0V4n2-3rAjLoqp6DhtlUTr4Xnxg" />
 	<meta name="viewport" content="width=device-width">
        <meta name="description" content="Creative Multimedia Programming">
         <meta name="keywords" content="HTML, CSS, XML,JavaScript, PHP, Design, Programming, Creative, Graphics, Video, Digital, Brackets, Adobe, Limerick, Limerick Insitute of Technology, Information Technology, Technology, Higher Diploma, College, Work Placement, Blog, Project, Creativity ">
