--- a/interactionDesign.html
+++ b/interactionDesign.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Shannon McNamara | Creative Multimedia Programming</title>
+        <title>Creative Multimedia Programming Postgraduate Limerick Institute Technology Information Technology Springboard HTML CSS XML
+JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LIT Interaction Design Website Prototypes Adobe Illustrator Photoshop
+	    Colour Lines 
+	    </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
            <meta name="description" content="Creative Multimedia Programming">
@@ -89,4 +92,9 @@
 
         
     </body>
+	
+	<footer>
+	<i>Shannon McNamara | Creative Multimedia Programming</i>
+	</footer>
+
 </html>
