--- a/interactionInterfaceDesign.html
+++ b/interactionInterfaceDesign.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Shannon McNamara | Creative Multimedia Programming</title>
+       <title>Creative Multimedia Programming Postgraduate Limerick Institute Technology Information Technology Springboard HTML CSS XML
+JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LIT Portfolio CV Prototypes Mobile Design Interaction Interface Design</title>
            <meta name="description" content="Creative Multimedia Programming">
         <meta name="keywords" content="HTML, CSS, XML,JavaScript, PHP, Design, Programming, Creative, Graphics, Video, Digital, Brackets, Adobe, Limerick, Limerick Insitute of Technology, Information Technology, Technology, Higher Diploma, College, Work Placement, Blog, Project, Creativity ">
         <meta name="author" content="Shannon McNamara">
@@ -158,4 +159,9 @@ The next decision was the fonts I would use on my CV. I decided on two fonts. Th
         </div>
         
     </body>
+	
+	<footer>
+	<i>Shannon McNamara | Creative Multimedia Programming</i>
+	</footer>
+
 </html>
