--- a/projectManagement.html
+++ b/projectManagement.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Shannon McNamara | Creative Multimedia Programming</title>
+       
+<title>Creative Multimedia Programming Postgraduate Limerick Institute Technology Information Technology Springboard HTML CSS XML
+JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LIT Project Management Manager Risks Gantt Chart </title>
+
            <meta name="description" content="Creative Multimedia Programming">
         <meta name="keywords" content="HTML, CSS, XML,JavaScript, PHP, Design, Programming, Creative, Graphics, Video, Digital, Brackets, Adobe, Limerick, Limerick Insitute of Technology, Information Technology, Technology, Higher Diploma, College, Work Placement, Blog, Project, Creativity ">
         <meta name="author" content="Shannon McNamara">
@@ -80,4 +83,8 @@ Project management, then, is the application of knowledge, skills, tools, and te
         </div>
         
     </body>
+	<footer>
+	<i>Shannon McNamara | Creative Multimedia Programming</i>
+	</footer>
+
 </html>
