--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			<h3><a href="semister.html">Semisters</a></h3>
 			<h3><a href="contact.html">More Information</a></h3>
 		</div>
+		<p>Creative Multimedia Programming is a Higher Diploma course available at Limerick Institute of Technology. This course develops students skills in the area's of Web Development, Web Programming and Multimedia Databases</p>
 		<div class="masonry">
 			
 			<div class="brick">
