--- a/index.html
+++ b/index.html
@@ -42,40 +42,51 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
 			
 			<div class="brick">
                 <a href="advancedWebProgramming.html"><img src="img/advanced.jpg" alt="Advanced Web Programming"></a>
-				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;<a href="advancedWebProgramming.html">Advanced Web Programming</a></figcaption>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="advancedWebProgramming.html">Advanced Web Programming</a></figcaption>
 			</div>
 			<div class="brick">
                 <a href="webProgramming.html"><img src="img/download.jpg" alt="Web Programming"></a>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="webProgramming.html">Web Programming</a></figcaption>
 			</div>
 			<div class="brick">
                 <a href="digitalVideo.html"><img src="img/digitalVideo.jpg" alt="Digital Video"></a>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="digitalVideo.html">Digital Video</a></figcaption>
 			</div>
 			<div class="brick">
                 <a href="webDevelopment.html"><img src="img/WebDevelopment.jpg" alt="Web Development"></a>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="webDevelopment.html">Web Development</a></figcaption>
 			</div>
 			<div class="brick">
                 <a href="3dGraphics.html"><img src="img/3dgraphics.jpg" alt="3D Graphics"></a>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="3dGraphics.html">3D Graphics</a></figcaption>
 			</div>
             <div class="brick">
                 <a href="interactionDesign.html"><img src="img/interactiondesign.jpg" alt="Interaction Design"></a>
+		    <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="interactionDesign.html">Interaction Design</a></figcaption>
 			</div>
 			<div class="brick">
                 <a href="multimediaDatabases.html"><img src="img/databases.jpg" alt="Multimedia Database Design"></a>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="multimediaDatabases.html">Multimedia Databases</a></figcaption>
 			</div>
 			<div class="brick">
                 <a href="workPlacement.html"><img src="img/workplacement.png" alt="Work Placement"></a>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="workPlacement.html">Work Placement</a></figcaption>
 			</div>
             <div class="brick">
                 <a href="multimediaProject.html" alt="Mutlimedia Project"><img src="img/project.jpg"></a>
+		    <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="multimediaProject.html">Multimedia Project</a></figcaption>
 			</div>
             <div class="brick">
                 <a href="evolvingWebTechnologies.html" alt="Evolving Web Technologies"><img src="img/EvolvingWeb.png"></a>
+		    <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="evolvingWebTechnologies.html">Evolving Web Technologies</a></figcaption>
 			</div>
             <div class="brick">
                 <a href="interactionInterfaceDesign.html" alt="Interaction Interface Design"><img src="img/iid.jpg"></a>
+		     <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="interactionInterfaceDesign.html">Interaction Interface Design</a></figcaption>
 			</div>
             <div class="brick">
                 <a href="projectManagement.html"><img src="img/management.jpg" alt="Project Management"></a>
+		     <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="projectManagement.html">Project Management</a></figcaption>
 			</div>
 		</div>
 
