--- a/index.html
+++ b/index.html
@@ -46,27 +46,28 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
 			</div>
 			<div class="brick">
                 <a href="webProgramming.html"><img src="img/download.jpg" alt="Web Programming"></a>
-				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="webProgramming.html">Web Programming</a></figcaption>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="webProgramming.html">Web Programming</a></figcaption>
 			</div>
 			<div class="brick">
                 <a href="digitalVideo.html"><img src="img/digitalVideo.jpg" alt="Digital Video"></a>
-				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="digitalVideo.html">Digital Video</a></figcaption>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="digitalVideo.html">Digital Video</a></figcaption>
 			</div>
 			<div class="brick">
                 <a href="webDevelopment.html"><img src="img/WebDevelopment.jpg" alt="Web Development"></a>
-				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="webDevelopment.html">Web Development</a></figcaption>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="webDevelopment.html">Web Development</a></figcaption>
 			</div>
 			<div class="brick">
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="3dGraphics.html">3D Graphics</a></figcaption>
                 <a href="3dGraphics.html"><img src="img/3dgraphics.jpg" alt="3D Graphics"></a>
-				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="3dGraphics.html">3D Graphics</a></figcaption>
+				
 			</div>
             <div class="brick">
                 <a href="interactionDesign.html"><img src="img/interactiondesign.jpg" alt="Interaction Design"></a>
-		    <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="interactionDesign.html">Interaction Design</a></figcaption>
+		    <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="interactionDesign.html">Interaction Design</a></figcaption>
 			</div>
 			<div class="brick">
                 <a href="multimediaDatabases.html"><img src="img/databases.jpg" alt="Multimedia Database Design"></a>
-				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="multimediaDatabases.html">Multimedia Databases</a></figcaption>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="multimediaDatabases.html">Multimedia Databases</a></figcaption>
 			</div>
 			<div class="brick">
                 <a href="workPlacement.html"><img src="img/workplacement.png" alt="Work Placement"></a>
@@ -96,7 +97,7 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
 
 </body>
 <footer>
-	<i>Shannon McNamara | Creative Multimedia Programming |Postgraduate Limerick Institute Technology Information Technology Springboard HTML CSS XML
+	<i>Shannon McNamara | Creative Multimedia Programming | Postgraduate | Limerick Institute Technology | Information Technology Springboard HTML CSS XML
 JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LIT 3DGraphics 3D Graphics Animation Render 3ds Max Autodesk Modelling Rendering Lighting Colour</i>
 	</footer>
 </html>
