--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
 			</div>
 			<div class="brick">
                 <a href="webProgramming.html"><img src="img/download.jpg" alt="Web Programming"></a>
-				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="webProgramming.html">Web Programming</a></figcaption>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="webProgramming.html">Web Programming</a></figcaption>
 			</div>
 			<div class="brick">
                 <a href="digitalVideo.html"><img src="img/digitalVideo.jpg" alt="Digital Video"></a>
-				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="digitalVideo.html">Digital Video</a></figcaption>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="digitalVideo.html">Digital Video</a></figcaption>
 			</div>
 			<div class="brick">
                 <a href="webDevelopment.html"><img src="img/WebDevelopment.jpg" alt="Web Development"></a>
-				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="webDevelopment.html">Web Development</a></figcaption>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="webDevelopment.html">Web Development</a></figcaption>
 			</div>
 			<div class="brick">
-				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="3dGraphics.html">3D Graphics</a></figcaption>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="3dGraphics.html">3D Graphics</a></figcaption>
                 <a href="3dGraphics.html"><img src="img/3dgraphics.jpg" alt="3D Graphics"></a>
 				
 			</div>
