--- a/3dGraphics.html
+++ b/3dGraphics.html
@@ -29,7 +29,7 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
                 <h1 class="title">Creative Multimedia Programming</h1>
 				<div class="intro">
 			<h3><a href="index.html">Home</a></h3>
-			<h3><a href="semister.html">Creative Multimeida Programming Semesters</a></h3>
+			<h3><a href="semister.html">Creative Multimedia Programming Semesters</a></h3>
 			<h3><a href="contact.html">More Information on Creative Multimedia Programming</a></h3>
 		</div>
             </div>
