--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
 			<h1 class="title">Creative Multimedia Programming</h1>
 		<div class="intro">
 			<h3><a href="index.html">Home</a></h3>
-			<h3><a href="semister.html">Creative Multimeida Programming Semesters</a></h3>
+			<h3><a href="semister.html">Creative Multimedia Programming Semesters</a></h3>
 			<h3><a href="contact.html">More Information on Creative Multimedia Programming</a></h3>
 		</div>
 		<p>Creative Multimedia Programming is a Higher Diploma course available at Limerick Institute of Technology. This course develops students skills in the area's of Web Development, Web Programming and Multimedia Databases</p>
@@ -46,7 +46,7 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
 			</div>
 			<div class="brick">
                 <a href="webProgramming.html"><img src="img/download.jpg" alt="Web Programming"></a>
-				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="webProgramming.html">Web Programming</a></figcaption>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="webProgramming.html">Web Programming</a></figcaption>
 			</div>
 			<div class="brick">
                 <a href="digitalVideo.html"><img src="img/digitalVideo.jpg" alt="Digital Video"></a>
@@ -54,10 +54,10 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
 			</div>
 			<div class="brick">
                 <a href="webDevelopment.html"><img src="img/WebDevelopment.jpg" alt="Web Development"></a>
-				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="webDevelopment.html">Web Development</a></figcaption>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="webDevelopment.html">Web Development</a></figcaption>
 			</div>
 			<div class="brick">
-				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="3dGraphics.html">3D Graphics</a></figcaption>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="3dGraphics.html">3D Graphics</a></figcaption>
                 <a href="3dGraphics.html"><img src="img/3dgraphics.jpg" alt="3D Graphics"></a>
 				
 			</div>
