--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
 			</div>
             <div class="brick">
                 <a href="interactionDesign.html"><img src="img/interactiondesign.jpg" alt="Interaction Design"></a>
-		    <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="interactionDesign.html">Interaction Design</a></figcaption>
+		    <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="interactionDesign.html">Interaction Design</a></figcaption>
 			</div>
 			<div class="brick">
                 <a href="multimediaDatabases.html"><img src="img/databases.jpg" alt="Multimedia Database Design"></a>
-				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="multimediaDatabases.html">Multimedia Databases</a></figcaption>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="multimediaDatabases.html">Multimedia Databases</a></figcaption>
 			</div>
 			<div class="brick">
                 <a href="workPlacement.html"><img src="img/workplacement.png" alt="Work Placement"></a>
-				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="workPlacement.html">Work Placement</a></figcaption>
+				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="workPlacement.html">Work Placement</a></figcaption>
 			</div>
             <div class="brick">
                 <a href="multimediaProject.html" alt="Mutlimedia Project"><img src="img/project.jpg"></a>
