--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
 			
 			<div class="brick">
                 <a href="advancedWebProgramming.html"><img src="img/advanced.jpg" alt="Advanced Web Programming"></a>
-				<figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="advancedWebProgramming.html">Advanced Web Programming</a></figcaption>
+				<div class="figcaption"><figcaption><a href="advancedWebProgramming.html">Advanced Web Programming</a></figcaption></div>
 			</div>
 			<div class="brick">
                 <a href="webProgramming.html"><img src="img/download.jpg" alt="Web Programming"></a>
