--- a/interactionInterfaceDesign.html
+++ b/interactionInterfaceDesign.html
@@ -29,8 +29,8 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
                  <h1 class="title">Creative Multimedia Programming</h1>
 				<div class="intro">
 			<h3><a href="index.html">Home</a></h3>
-			<h3><a href="semister.html">Semisters</a></h3>
-			<h3><a href="contact.html">More Information</a></h3>
+			<h3><a href="semister.html">Creative Multimedia Programming Semesters</a></h3>
+			<h3><a href="contact.html">More Information on Creative Multimedia Programming</a></h3>
 		</div>
             </div>
             
@@ -160,8 +160,10 @@ The next decision was the fonts I would use on my CV. I decided on two fonts. Th
         
     </body>
 	
-	<footer>
-	<i>Shannon McNamara | Creative Multimedia Programming</i>
-	</footer>
+	
+<footer>
+<i>Shannon McNamara | Creative Multimedia Programming | Postgraduate | Limerick Institute Technology | Information Technology Springboard HTML CSS XML
+JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LIT 3DGraphics 3D Graphics Animation Render 3ds Max Autodesk Modelling Rendering Lighting Colour</i>
+</footer>
 
 </html>
