--- a/webProgramming.html
+++ b/webProgramming.html
@@ -29,8 +29,8 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
                  <h1 class="title">Creative Multimedia Programming</h1>
 				<div class="intro">
 			<h3><a href="index.html">Home</a></h3>
-			<h3><a href="semister.html">Semisters</a></h3>
-			<h3><a href="contact.html">More Information</a></h3>
+<h3><a href="semister.html">Creative Multimedia Programming Semesters</a></h3>
+<h3><a href="contact.html">More Information on Creative Multimedia Programming</a></h3>
 		</div>
             </div>
             
@@ -105,8 +105,11 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
 
         
     </body>
-	<footer>
-	<i>Shannon McNamara | Creative Multimedia Programming</i>
-	</footer>
+	
+<footer>
+<i>Shannon McNamara | Creative Multimedia Programming | Postgraduate | Limerick Institute Technology | Information Technology Springboard HTML CSS XML
+JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LIT 3DGraphics 3D Graphics Animation Render 3ds Max Autodesk Modelling Rendering Lighting Colour</i>
+</footer>
+
 
 </html>
