--- a/semister.html
+++ b/semister.html
@@ -44,7 +44,7 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
                
 		    <p><a href="3dGraphics.html">3D Graphics</a></p>
 		    <p><a href="digitalVideo.html">Digital Video</a></p>
-		    <p><a href="nteractionDesign.html">Interaction Design</a></p>
+		    <p><a href="interactionDesign.html">Interaction Design</a></p>
 		    <p><a href="multimediaDatabases.html">Multimedia Database Systems and Design</a></p>
 		    <p><a href="webDevelopment.html">Web Development</a></p>
 		    <p><a href="webProgramming.html">Web Programming</a></p>   
