--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
 		<div class="intro">
 			<h3><a href="index.html">Home</a></h3>
 			<h3><a href="semister.html">Creative Multimedia Programming Semesters</a></h3>
-			<h3><a href="contact.html">More Information on Creative Multimedia Programming t2</a></h3>
+			<h3><a href="contact.html">More Information on Creative Multimedia Programming</a></h3>
 		</div>
 		<p>Creative Multimedia Programming is a Higher Diploma course available at Limerick Institute of Technology. This course develops students skills in the area's of Web Development, Web Programming and Multimedia Databases</p>
 		<div class="masonry">
