--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
 
 	<div class="wrapper">
 
-			<h1 class="title">Creative Multimedia Programming</h1>
+			<h1 class="title">Creative Multimedia Programming t</h1>
 		<div class="intro">
 			<h3><a href="index.html">Home</a></h3>
 			<h3><a href="semister.html">Creative Multimedia Programming Semesters</a></h3>
