--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
 
 	<div class="wrapper">
 
-			<h1 class="title">Creative Multimedia Programming t</h1>
+			<h1 class="title">Creative Multimedia Programming t2</h1>
 		<div class="intro">
 			<h3><a href="index.html">Home</a></h3>
 			<h3><a href="semister.html">Creative Multimedia Programming Semesters</a></h3>
@@ -79,7 +79,7 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
 			</div>
             <div class="brick">
                 <a href="evolvingWebTechnologies.html" alt="Evolving Web Technologies"><img src="img/EvolvingWeb.png"></a>
-		   <div class="figcaption"> <figcaption><a href="evolvingWebTechnologies.html">Evolving Web Technologies</a></figcaption></div>
+		   <div class="figcaption2"> <figcaption><a href="evolvingWebTechnologies.html">Evolving Web Technologies</a></figcaption></div>
 			</div>
             <div class="brick">
                 <a href="interactionInterfaceDesign.html" alt="Interaction Interface Design"><img src="img/iid.jpg"></a>
