--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
 
 	<div class="wrapper">
 
-			<h1 class="title">Creative Multimedia Programming t2</h1>
+			<h1 class="title">Creative Multimedia Programming t3</h1>
 		<div class="intro">
 			<h3><a href="index.html">Home</a></h3>
 			<h3><a href="semister.html">Creative Multimedia Programming Semesters</a></h3>
@@ -71,7 +71,7 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
 			</div>
 			<div class="brick">
                 <a href="workPlacement.html"><img src="img/workplacement.png" alt="Work Placement"></a>
-				<div class="figcaption"><figcaption><a href="workPlacement.html">Work Placement</a></figcaption></div>
+				<div class="figcaption3"><figcaption><a href="workPlacement.html">Work Placement</a></figcaption></div>
 			</div>
             <div class="brick">
                 <a href="multimediaProject.html" alt="Mutlimedia Project"><img src="img/project.jpg"></a>
