--- a/index.html
+++ b/index.html
@@ -45,48 +45,48 @@
 			</div>
 			<div class="brick">
                 <a href="webProgramming.html"><img src="img/download.jpg" alt="Web Programming"></a>
-				<div class="figcaption"><figcaption><a href="webProgramming.html">Web Programming</a></figcaption></div>
+				<div class="figcaption"><figcaption><a href="webProgramming.html"><h3>Web Programming</h3></a></figcaption></div>
 			</div>
 			<div class="brick">
                 <a href="digitalVideo.html"><img src="img/digitalVideo.jpg" alt="Digital Video"></a>
-				<div class="figcaption"><figcaption><a href="digitalVideo.html">Digital Video</a></figcaption></div>
+				<div class="figcaption"><figcaption><a href="digitalVideo.html"><h3>Digital Video</h3></a></figcaption></div>
 			</div>
 			<div class="brick">
                 <a href="webDevelopment.html"><img src="img/WebDevelopment.jpg" alt="Web Development"></a>
-				<div class="figcaption"><figcaption><a href="webDevelopment.html">Web Development</a></figcaption></div>
+				<div class="figcaption"><figcaption><a href="webDevelopment.html"><h3>Web Development</h3></a></figcaption></div>
 			</div>
 			<div class="brick">
-				<div class="figcaption"><figcaption><a href="3dGraphics.html">3D Graphics</a></figcaption></div>
+				<div class="figcaption"><figcaption><a href="3dGraphics.html"><h3>3D Graphics</h3></a></figcaption></div>
                 <a href="3dGraphics.html"><img src="img/3dgraphics.jpg" alt="3D Graphics"></a>
 				
 			</div>
             <div class="brick">
                 <a href="interactionDesign.html"><img src="img/interactiondesign.jpg" alt="Interaction Design"></a>
-		    <div class="figcaption"><figcaption><a href="interactionDesign.html">Interaction Design</a></figcaption></div>
+		    <div class="figcaption"><figcaption><a href="interactionDesign.html"><h3>Interaction Design</h3></a></figcaption></div>
 			</div>
 			<div class="brick">
                 <a href="multimediaDatabases.html"><img src="img/databases.jpg" alt="Multimedia Database Design"></a>
-				<div class="figcaption"><figcaption><a href="multimediaDatabases.html">Multimedia Databases</a></figcaption></div>
+				<div class="figcaption"><figcaption><a href="multimediaDatabases.html"><h3>Multimedia Databases</h3></a></figcaption></div>
 			</div>
 			<div class="brick">
                 <a href="workPlacement.html"><img src="img/workplacement.png" alt="Work Placement"></a>
-				<div class="figcaption3"><figcaption><a href="workPlacement.html">Work Placement</a></figcaption></div>
+				<div class="figcaption3"><figcaption><a href="workPlacement.html"><h3>Work Placement</h3></a></figcaption></div>
 			</div>
             <div class="brick">
                 <a href="multimediaProject.html" alt="Mutlimedia Project"><img src="img/project.jpg"></a>
-		   <div class="figcaption"><figcaption><a href="multimediaProject.html">Multimedia Project</a></figcaption></div>
+		   <div class="figcaption"><figcaption><a href="multimediaProject.html"><h3>Multimedia Project</h3></a></figcaption></div>
 			</div>
             <div class="brick">
                 <a href="evolvingWebTechnologies.html" alt="Evolving Web Technologies"><img src="img/EvolvingWeb.png"></a>
-		   <div class="figcaption2"> <figcaption><a href="evolvingWebTechnologies.html">Evolving Web Technologies</a></figcaption></div>
+		   <div class="figcaption2"> <figcaption><a href="evolvingWebTechnologies.html"><h3>Evolving Web Technologies</h3></a></figcaption></div>
 			</div>
             <div class="brick">
                 <a href="interactionInterfaceDesign.html" alt="Interaction Interface Design"><img src="img/iid.jpg"></a>
-		    <div class="figcaption"> <figcaption><a href="interactionInterfaceDesign.html">Interaction Interface Design</a></figcaption></div>
+		    <div class="figcaption"> <figcaption><a href="interactionInterfaceDesign.html"><h3>Interaction Interface Design</h3></a></figcaption></div>
 			</div>
             <div class="brick">
                 <a href="projectManagement.html"><img src="img/management.jpg" alt="Project Management"></a>
-		     <div class="figcaption"><figcaption><a href="projectManagement.html">Project Management</a></figcaption></div>
+		     <div class="figcaption"><figcaption><a href="projectManagement.html"><h3>Project Management</h3></a></figcaption></div>
 			</div>
 		</div>
 
