--- a/3dGraphics.html
+++ b/3dGraphics.html
@@ -3,9 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-       <title>Creative Multimedia Programming Postgraduate Limerick Institute Technology Information Technology Springboard HTML CSS XML
-JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LIT 3DGraphics 3D Graphics Animation Render 3ds Max Autodesk Modelling Rendering Lighting Colour</title>
-          <meta name="description" content="Creative Multimedia Programming">
+       <title>Creative Multimedia Programming LIT </title>
+         <meta name="description" content="Creative Multimedia Programming,Limerick Insitute of Technology, Web Development, Design, HTML, CSS, XML,JavaScript, PHP, Programming ">
         <meta name="keywords" content="HTML, CSS, XML,JavaScript, PHP, Design, Programming, Creative, Graphics, Video, Digital, Brackets, Adobe, Limerick, Limerick Insitute of Technology, Information Technology, Technology, Higher Diploma, College, Work Placement, Blog, Project, Creativity ">
         <meta name="author" content="Shannon McNamara">
         <meta name="viewport" content="width=device-width">
@@ -48,7 +47,10 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
                 <h2>Introduction to 3D Graphics</h2>
                     </div>
                 <div class="text">
-                Three-dimensional computer graphics (3D computer graphics, in contrast to 2D computer graphics) are graphics that use a three-dimensional representation of geometric data (often Cartesian) that is stored in the computer for the purposes of performing calculations and rendering 2D images. Such images may be stored for viewing later or displayed in real-time.
+                <h3>Three-dimensional computer graphics (3D computer graphics, in contrast to 2D computer graphics) are graphics that use a 
+			three-dimensional representation of geometric data (often Cartesian) that is stored in the computer for the 
+			purposes of performing calculations and rendering 2D images. Such images may be stored for 
+			viewing later or displayed in real-time.</h3>
                     </div>
 
                 <div class="text">
