--- a/3dGraphics.html
+++ b/3dGraphics.html
@@ -54,7 +54,10 @@
                     </div>
 
                 <div class="text">
-                3D computer graphics rely on many of the same algorithms as 2D computer vector graphics in the wire-frame model and 2D computer raster graphics in the final rendered display. In computer graphics software, the distinction between 2D and 3D is occasionally blurred; 2D applications may use 3D techniques to achieve effects such as lighting, and 3D may use 2D rendering techniques.
+                <h4>3D computer graphics rely on many of the same algorithms as 2D computer vector graphics in the 
+			wire-frame model and 2D computer raster graphics in the final rendered display. In computer 
+			graphics software, the distinction between 2D and 3D is occasionally blurred; 2D applications 
+			may use 3D techniques to achieve effects such as lighting, and 3D may use 2D rendering techniques.</h4>
                 </div>
 
                <div class="image">
