--- a/3dGraphics.html
+++ b/3dGraphics.html
@@ -25,7 +25,7 @@
     <body>
         <div id="page-wrap">
             <div id="header">
-                <h1 class="title">Creative Multimedia Programming</h1>
+                <h1 class="title">Creative Multimedia Programming t</h1>
 				<div class="intro">
 			<h3><a href="index.html">Home</a></h3>
 			<h3><a href="semister.html">Creative Multimedia Programming Semesters</a></h3>
