--- a/evolvingWebTechnologies.html
+++ b/evolvingWebTechnologies.html
@@ -3,9 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Creative Multimedia Programming Postgraduate Limerick Institute Technology Information Technology Springboard HTML CSS XML
-JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LIT Evolving Web Technologies SEO tools Analytics Google Masterweb Reponsive Design </title>
-           <meta name="description" content="Creative Multimedia Programming">
+        <title>Creative Multimedia Programming LIT /title>
+          <meta name="description" content="Creative Multimedia Programming,Limerick Insitute of Technology, Web Development, Design, HTML, CSS, XML,JavaScript, PHP, Programming ">
         <meta name="keywords" content="HTML, CSS, XML,JavaScript, PHP, Design, Programming, Creative, Graphics, Video, Digital, Brackets, Adobe, Limerick, Limerick Insitute of Technology, Information Technology, Technology, Higher Diploma, College, Work Placement, Blog, Project, Creativity ">
         <meta name="author" content="Shannon McNamara">
         <meta name="viewport" content="width=device-width">
@@ -48,10 +47,10 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
                 <h2>Introduction to Evolving Web Technologies</h2>
                     </div>
                 <div class="text">
-   The web today is a growing universe of interlinked web pages and web apps, teeming with videos, photos, and interactive content. What the average user doesn't see is the interplay of web technologies and browsers that makes all this possible.
+   <h3>The web today is a growing universe of interlinked web pages and web apps, teeming with videos, photos, and interactive content. What the average user doesn't see is the interplay of web technologies and browsers that makes all this possible.
 Over time web technologies have evolved to give web developers the ability to create new generations of useful and immersive web experiences. Today's web is a result of the ongoing efforts of an open web community that helps define these web technologies, like HTML5, CSS3 and WebGL and ensure that they're supported in all web browsers.
 The color bands in this visualization represent the interaction between web technologies and browsers, which brings to life the many powerful web apps that we use daily.
-
+			</h3>
 
                     </div>
 
