--- a/interactionDesign.html
+++ b/interactionDesign.html
@@ -3,11 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Creative Multimedia Programming Postgraduate Limerick Institute Technology Information Technology Springboard HTML CSS XML
-JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LIT Interaction Design Website Prototypes Adobe Illustrator Photoshop
-	    Colour Lines 
+        <title>Creative Multimedia Programming Postgraduate  LIT
 	    </title>
-        <meta name="description" content="">
+      <meta name="description" content="Creative Multimedia Programming,Limerick Insitute of Technology, Web Development, Design, HTML, CSS, XML,JavaScript, PHP, Programming ">
         <meta name="viewport" content="width=device-width">
            <meta name="description" content="Creative Multimedia Programming">
         <meta name="keywords" content="HTML, CSS, XML,JavaScript, PHP, Design, Programming, Creative, Graphics, Video, Digital, Brackets, Adobe, Limerick, Limerick Insitute of Technology, Information Technology, Technology, Higher Diploma, College, Work Placement, Blog, Project, Creativity ">
@@ -51,14 +49,15 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
                 <h2>Introduction to Interaction Design</h2>
                     </div>
                 <div class="text">
-    Interaction design, often abbreviated as IxD, is "the practice of designing interactive digital products, environments, systems, and services.":xxxi,1 While the digital side of this statement is true, interaction design is also useful when creating physical (non-digital) products, exploring how a user might interact with it. Common topics of interaction design include design, human–computer interaction, and software development. While interaction design has an interest in form (similar to other design fields), its main area of focus rests on behavior.:1 Rather than analyzing how things are, interaction design synthesizes and imagines things as they could be. This element of interaction design is what clearly marks IxD as a design field as opposed to a science or engineering field
-
+    <h3>Interaction design, often abbreviated as IxD, is "the practice of designing interactive digital products, environments, systems, and services.":xxxi,1 While the digital side of this statement is true, interaction design is also useful when creating physical (non-digital) products, exploring how a user might interact with it. Common topics of interaction design include design, human–computer interaction, and software development. While interaction design has an interest in form (similar to other design fields), its main area of focus rests on behavior.:1 Rather than analyzing how things are, interaction design synthesizes and imagines things as they could be. This element of interaction design is what clearly marks IxD as a design field as opposed to a science or engineering field
+			</h3>
 
                     </div>
 
                 <div class="text">
-         While disciplines such as software engineering have a heavy focus on designing for technical stakeholders, interaction design is geared toward satisfying the majority of users
-                </div>
+         <p>While disciplines such as software engineering have a heavy focus on designing for technical stakeholders, interaction design is geared toward satisfying the majority of users
+			</p>
+		    </div>
 
                <div class="image">
                 <img src="img/interactiondesign1.png" alt="Example of Interaction Design"/>
