--- a/multimediaDatabases.html
+++ b/multimediaDatabases.html
@@ -3,10 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Creative Multimedia Programming Postgraduate Limerick Institute Technology Information Technology Springboard HTML CSS XML
-JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LIT Multimedia Database PHPMyAdmin Workbench CRUD Data Big Data Storage</title>
+        <title>Creative Multimedia Programming Postgraduate LIT</title>
 
-           <meta name="description" content="Creative Multimedia Programming">
+           <meta name="description" content="Creative Multimedia Programming,Limerick Insitute of Technology, Web Development, Design, HTML, CSS, XML,JavaScript, PHP, Programming ">
         <meta name="keywords" content="HTML, CSS, XML,JavaScript, PHP, Design, Programming, Creative, Graphics, Video, Digital, Brackets, Adobe, Limerick, Limerick Insitute of Technology, Information Technology, Technology, Higher Diploma, College, Work Placement, Blog, Project, Creativity ">
         <meta name="author" content="Shannon McNamara">
         <meta name="viewport" content="width=device-width">
@@ -54,14 +53,15 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
                 <h2>Introduction to Multimedia Database Systems and Design</h2>
                     </div>
                 <div class="text">
-                A Multimedia database (MMDB) is a collection of related multimedia data.The multimedia data include one or more primary media data types such as text, images, graphic objects (including drawings, sketches and illustrations) animation sequences, audio and video.
+               <h3> A Multimedia database (MMDB) is a collection of related multimedia data.The multimedia data include one or more primary media data types such as text, images, graphic objects (including drawings, sketches and illustrations) animation sequences, audio and video.
 
-
+			</h3>
                     </div>
 
                 <div class="text">
-          A Multimedia Database Management System (MMDBMS) is a framework that manages different types of data potentially represented in a wide diversity of formats on a wide array of media sources. It provides support for multimedia data types, and facilitate for creation, storage, access, query and control of a multimedia database
-                </div>
+         <p> A Multimedia Database Management System (MMDBMS) is a framework that manages different types of data potentially represented in a wide diversity of formats on a wide array of media sources. It provides support for multimedia data types, and facilitate for creation, storage, access, query and control of a multimedia database
+			</p>
+		    </div>
 
                <div class="image">
                 <img src="img/database.jpg" alt="Example of Database"/>
