--- a/multimediaProject.html
+++ b/multimediaProject.html
@@ -3,10 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Creative Multimedia Programming Postgraduate Limerick Institute Technology Information Technology Springboard HTML CSS XML
-JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LIT Multimedia Project Agile Ageing RSA Design Awards Games Database SQL PHP HTML CSS AJAX AtSpace</title>
+        <title>Creative Multimedia Programming LIT </title>
 
-           <meta name="description" content="Creative Multimedia Programming">
+           <meta name="description" content="Creative Multimedia Programming,Limerick Insitute of Technology, Web Development, Design, HTML, CSS, XML,JavaScript, PHP, Programming ">
         <meta name="keywords" content="HTML, CSS, XML,JavaScript, PHP, Design, Programming, Creative, Graphics, Video, Digital, Brackets, Adobe, Limerick, Limerick Insitute of Technology, Information Technology, Technology, Higher Diploma, College, Work Placement, Blog, Project, Creativity ">
         <meta name="author" content="Shannon McNamara">
         <meta name="viewport" content="width=device-width">
@@ -49,16 +48,20 @@ JavaScript PHP Design Graphics Video Digital Brackets Higher Diploma Semister LI
                 <h2>PHP: Insert</h2>
                     </div>
                 <div class="text">
-                Today I began to code the back-end to my project. To code my back-end I will use PHP. PHP is a 'widely used open source general purpose scripting language that is especially suited for web development and can be embedded into HTML'.
-                    </div>
+                <h3>Today I began to code the back-end to my project. To code my back-end I will use PHP. PHP is a 'widely used open source general purpose scripting language that is especially suited for web development and can be embedded into HTML'.
+			</h3>
+			</div>
 
                 <div class="text">
-                    The first aspect of coding I combatted today was an insert. An insert is used to insert data into the database. For my project I will insert users information upon sign up. This data includes the users: firstname, lastname, date of birth, email address and password. Once the user signs up, this data is stored within the database. This information is stored within the database for login credentials.
-                </div>
+                    <p>The first aspect of coding I combatted today was an insert. An insert is used to insert data into the database. For my project I will insert users information upon sign up. This data includes the users: firstname, lastname, date of birth, email address and password. Once the user signs up, this data is stored within the database. This information is stored within the database for login credentials.
+			</p>
+		    </div>
 
                 <div class="text">
+		<p>	
                     I was able to insert information into the database successfully. As it was successful, I also coded an insert for my mailing list. This information is stored under the contact table in my database. The information stored for the mailing list includes the users: firstname, lastname, email address and a comment section if they wish to leave any information about the web application or games.
-            </div>
+			</p>
+		    </div>
                 
                 <div class="image">
                 <img src="img/mm1.png" alt="Insert code php"/>
