--- a/semister.html
+++ b/semister.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Creative Multimedia Programming LIT </title>
-           <meta name="description" content="Creative Multimedia Programming,Limerick Insitute of Technology, Web Development, Design, HTML, CSS, XML,JavaScript, PHP, Programming ">
+           <meta name="description" content="Creative Multimedia Programming,Limerick Institute of Technology, Web Development, Design, HTML, CSS, XML,JavaScript, PHP, Programming ">
         <meta name="keywords" content="HTML, CSS, XML,JavaScript, PHP, Design, Programming, Creative, Graphics, Video, Digital, Brackets, Adobe, Limerick, Limerick Insitute of Technology, Information Technology, Technology, Higher Diploma, College, Work Placement, Blog, Project, Creativity ">
         <meta name="author" content="Shannon McNamara">
         <meta name="viewport" content="width=device-width">
