--- a/3dGraphics.html
+++ b/3dGraphics.html
@@ -45,7 +45,7 @@
             </div>
                 <hr/>
                 <div class="title">
-                <h2>Introduction to 3D Graphics</h2>
+                <h2>Creative Multimedia Programming: Introduction to 3D Graphics</h2>
                     </div>
                 <div class="text">
                 <h3>Three-dimensional computer graphics (3D computer graphics, in contrast to 2D computer graphics) are graphics that use a 
