--- a/digitalVideo.html
+++ b/digitalVideo.html
@@ -45,7 +45,7 @@
             </div>
                 <hr/>
                 <div class="title">
-                <h2>Introduction to Narrative Film Production</h2>
+                <h2>Creative Multimedia Programming: Introduction to Narrative Film Production</h2>
                     </div>
                 
                 <div class="text">
